--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       {
         "language": "frugal",
         "scopeName": "source.frugal",
-        "path": "./syntaxes/frugal.tmLanguage"
+        "path": "./syntaxes/frugal.tmLanguage.json"
       }
     ]
   },
